--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install npm dependencies
         run: npm install
 
+      - name: Install pod dependencies
+        run: cd ios && pod install
       # Build the iOS app
       - name: Build iOS App
-        env:
-          CI: true # Required for some Fastlane setups
         run: cd android && bundle exec fastlane beta
