--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -6,7 +6,14 @@ jobs:
   build:
     runs-on: macos-latest # Uses macOS runner with Xcode pre-installed
 
+    
     steps:
+
+      - name: Setup Android SDK Tools
+        # You may pin to the exact commit or the version.
+        # uses: android-actions/setup-android@00854ea68c109d98c75d956347303bf7c45b0277
+        uses: android-actions/setup-android@v3.2.1
+          
       - name: Checkout repository
         uses: actions/checkout@v3
 
