--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -7,6 +7,13 @@ jobs:
     runs-on: ubuntu-latest # Uses macOS runner with Xcode pre-installed
 
     steps:
+
+      - name: Setup Java JDK
+        uses: actions/setup-java@v4.5.0
+        with:
+          # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
+          java-version: 17
+          
       - name: Setup Android SDK Tools
         # You may pin to the exact commit or the version.
         # uses: android-actions/setup-android@00854ea68c109d98c75d956347303bf7c45b0277
