--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -11,6 +11,7 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@v4.5.0
         with:
+          distribution: 'temurin'
           # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
           java-version: 17
           
