--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Install npm dependencies
         run: npm install
 
+      - name: Install pod dependencies
+        run: cd ios && pod install
       # Build the iOS app
       - name: Build Android App
         run: cd ios && fastlane build
