--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: '20'
 
       - name: Install Fastlane
-        run: brew install fastlane eza
+        run: brew install fastlane
       # Install dependencies
       - name: Install npm dependencies
         run: npm install
@@ -38,5 +38,5 @@ jobs:
                         -destination 'generic/platform=iOS' \
                         -derivedDataPath ./build \
                         -quiet \
-                        CODE_SIGNING_ALLOWED="NO" | xcpretty
+                        CODE_SIGNING_ALLOWED="NO" | xcpretty -r junit
             eza --tree ./build
