--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -38,5 +38,5 @@ jobs:
                         -destination 'generic/platform=iOS' \
                         -derivedDataPath ./build \
                         -quiet \
-                        CODE_SIGNING_ALLOWED="NO" | xcpretty --quiet
+                        CODE_SIGNING_ALLOWED="NO" | xcpretty --simple
             
