--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -37,5 +37,5 @@ jobs:
                         -configuration Debug \
                         -destination 'generic/platform=iOS' \
                         -derivedDataPath ./build \
-                        CODE_SIGNING_ALLOWED="NO" | xcbeautify
+                        CODE_SIGNING_ALLOWED="NO" | xcpretty
             
