--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -28,17 +28,28 @@ jobs:
       #- name: Build iOS App
       #  run: cd ios && fastlane build
 
+      # - name: Build iOS App
+      #   run: |
+      #       cd ios
+      #       xcodebuild clean build \
+      #                   -workspace IosGithubActionBuild.xcworkspace \
+      #                   -scheme IosGithubActionBuild \
+      #                   -configuration Debug \
+      #                   -destination 'generic/platform=iOS' \
+      #                   -derivedDataPath ./build \
+      #                   OTHER_SWIFT_FLAGS="-suppress-warnings" \
+      #                   CODE_SIGNING_ALLOWED="NO" | xcbeautify -q
+      #       ls build
+
       - name: Build iOS App
         run: |
-            cd ios
-            xcodebuild clean build \
-                        -workspace IosGithubActionBuild.xcworkspace \
-                        -scheme IosGithubActionBuild \
-                        -configuration Debug \
-                        -destination 'generic/platform=iOS' \
-                        -derivedDataPath ./build \
-                        OTHER_SWIFT_FLAGS="-suppress-warnings" \
-                        CODE_SIGNING_ALLOWED="NO" | xcbeautify -q
-            ls build
-                        
+          export GYM_SCHEME="IosGithubActionBuild"
+          export GYM_DESTINATION="generic/platform=iOS"
+          export GYM_WORKSPACE="IosGithubActionBuild.xcworkspace"
+          export GYM_EXPORT_METHOD="ad-hoc"
+          export GYM_OUTPUT_DIRECTORY="./build"
+          export GYM_OUTPUT_NAME="GenericBuild.ipa"
+          export GYM_CLEAN=true
+          export GYM_CODE_SIGNING_ALLOWED="NO"
+          fastlane run build_ios_app
             
