--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -70,7 +70,7 @@ jobs:
           export GYM_OUTPUT_DIRECTORY="./build"
           export GYM_OUTPUT_NAME="GenericBuild.ipa"
           export GYM_CLEAN=true
-          export GYM_XCARGS="-allowProvisioningUpdates"
+          # export GYM_XCARGS="-allowProvisioningUpdates"
           fastlane run build_ios_app 
           
       - name:  Ios App Upload
