--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -72,7 +72,7 @@ jobs:
           export GYM_CLEAN=true
           # export GYM_XCARGS="-allowProvisioningUpdates"
           export GYM_XCARGS="CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
-          fastlane run build_ios_app provisioning_profile_specifier:"app-store-profile-sample-github-actions"
+          fastlane run build_ios_app
           
       - name:  Ios App Upload
         run: |
