--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -62,7 +62,7 @@ jobs:
           TEAM_ID: ${{ secrets.GYM_EXPORT_TEAM_ID }}
         run: |
           cd ios
-          # fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
+          fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
           export GYM_SCHEME="IosGithubActionBuild"
           export GYM_DESTINATION="generic/platform=iOS"
           export GYM_WORKSPACE="IosGithubActionBuild.xcworkspace"
