--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -72,7 +72,7 @@ jobs:
           export GYM_CLEAN=true
           # export GYM_XCARGS="-allowProvisioningUpdates"
           export GYM_XCARGS="COCOAPODS_PARALLEL_CODE_SIGN=true CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
-          fastlane run build_ios_app
+          fastlane run build_ios_app --verbose
           
       - name:  Ios App Upload
         run: |
