--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -49,6 +49,7 @@ jobs:
           TEAM_ID: ${{ secrets.GYM_EXPORT_TEAM_ID }}
         run: |
              cd ios
+             fastlane run setup_ci
               fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
               xcodebuild \
                 -workspace "IosGithubActionBuild.xcworkspace" \
