--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -49,7 +49,7 @@ jobs:
       #     TEAM_ID: ${{ secrets.GYM_EXPORT_TEAM_ID }}
       #   run: |
       #        cd ios
-      #        fastlane run setup_ci
+      #        fastlane run setup_ci force:"true"
       #         fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
       #         xcodebuild \
       #           -workspace "IosGithubActionBuild.xcworkspace" \
@@ -62,7 +62,7 @@ jobs:
       #           PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
       #           COCOAPODS_PARALLEL_CODE_SIGN=true \
       #           -archivePath "./build/GenericBuild.xcarchive" \
-      #           archive
+      #           archive | xcbeautify
       #         plutil -create xml1 ExportOptions.plist
       #         plutil -insert method -string "app-store" ExportOptions.plist
       #         plutil -insert destination -string "export" ExportOptions.plist
@@ -77,7 +77,7 @@ jobs:
           TEAM_ID: ${{ secrets.GYM_EXPORT_TEAM_ID }}
         run: |
           cd ios
-          fastlane run setup_ci
+          fastlane run setup_ci force:"true"
           fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
           export GYM_SCHEME="IosGithubActionBuild"
           export GYM_DESTINATION="generic/platform=iOS"
