--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install npm dependencies
         run: npm install
 
-      - name: Install pod dependencies
-        run: cd ios && pod install
+      # - name: Install pod dependencies
+      #   run: cd ios && pod install
       # Build the iOS app
       #- name: Build iOS App
       #  run: cd ios && fastlane build
@@ -78,6 +78,10 @@ jobs:
           CERT_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
         run: |
           cd ios
+          chmod -R 777 .
+          rm -rf ~/Library/Developer/Xcode/DerivedData
+          pod deintegrate
+          pod install --repo-update
           security unlock-keychain -p "$CERT_PASSWORD" ~/Library/Keychains/build.keychain
           fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
           export GYM_SCHEME="IosGithubActionBuild"
