--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -45,31 +45,30 @@ jobs:
           CERTIFICATE_P12: ${{ secrets.CERTIFICATE_P12 }}
           CERT_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
-      # - name: Build iOS App
-      #   env:
-      #     TEAM_ID: ${{ secrets.GYM_EXPORT_TEAM_ID }}
-      #   run: |
-      #        cd ios
-      #         fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
-      #         xcodebuild \
-      #           -workspace "IosGithubActionBuild.xcworkspace" \
-      #           -scheme "IosGithubActionBuild" \
-      #           -destination "generic/platform=iOS" \
-      #           -configuration Release \
-      #           clean build \
-      #           CODE_SIGN_IDENTITY="iPhone Distribution" \
-      #           CODE_SIGN_STYLE="Manual" \
-      #           PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
-      #           COCOAPODS_PARALLEL_CODE_SIGN=true \
-      #           -archivePath "./build/GenericBuild.xcarchive" \
-      #           archive | xcbeautify
-      #         plutil -create xml1 ExportOptions.plist
-      #         plutil -insert method -string "app-store" ExportOptions.plist
-      #         plutil -insert destination -string "export" ExportOptions.plist
-      #         xcodebuild -exportArchive \
-      #           -archivePath "./build/GenericBuild.xcarchive" \
-      #           -exportPath "./build" \
-      #           -exportOptionsPlist "ExportOptions.plist"
+      - name: Build iOS App
+        env:
+          TEAM_ID: ${{ secrets.GYM_EXPORT_TEAM_ID }}
+        run: |
+             cd ios
+              fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
+              xcodebuild \
+                -workspace "IosGithubActionBuild.xcworkspace" \
+                -scheme "IosGithubActionBuild" \
+                -destination "generic/platform=iOS" \
+                -configuration Release \
+                clean build \
+                CODE_SIGN_IDENTITY="iPhone Distribution" \
+                # CODE_SIGN_STYLE="Manual" \
+                PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
+                -archivePath "./build/GenericBuild.xcarchive" \
+                archive | xcbeautify
+              plutil -create xml1 ExportOptions.plist
+              plutil -insert method -string "app-store" ExportOptions.plist
+              plutil -insert destination -string "export" ExportOptions.plist
+              xcodebuild -exportArchive \
+                -archivePath "./build/GenericBuild.xcarchive" \
+                -exportPath "./build" \
+                -exportOptionsPlist "ExportOptions.plist"
 
 
       - name: Build iOS App
@@ -92,7 +91,7 @@ jobs:
           export GYM_OUTPUT_NAME="GenericBuild.ipa"
           export GYM_CLEAN=true
           # export GYM_XCARGS="-allowProvisioningUpdates"
-          export GYM_XCARGS="COCOAPODS_PARALLEL_CODE_SIGN=true CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
+          export GYM_XCARGS="CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
           fastlane run build_ios_app
           
       - name:  Ios App Upload
