--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -50,13 +50,6 @@ jobs:
           TEAM_ID: ${{ secrets.GYM_EXPORT_TEAM_ID }}
         run: |
              cd ios
-             sed -i '' '/name = "\\[CP\\] Embed Pods Frameworks";/{
-              n
-              a\
-              outputPaths = ("$(BUILT_PRODUCTS_DIR)/$(FRAMEWORKS_FOLDER_PATH)");
-              }' IosGithubActionBuild.xcodeproj/project.pbxproj
-
-             
               fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
               xcodebuild \
                 -workspace "IosGithubActionBuild.xcworkspace" \
@@ -65,7 +58,7 @@ jobs:
                 -configuration Release \
                 clean build \
                 CODE_SIGN_IDENTITY="iPhone Distribution" \
-                # CODE_SIGN_STYLE="Manual" \
+                CODE_SIGN_STYLE="Manual" \
                 PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
                 -archivePath "./build/GenericBuild.xcarchive" \
                 archive | xcbeautify
