--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -39,7 +39,9 @@ jobs:
           security import certificate.p12 -k ~/Library/Keychains/build.keychain -P "$CERT_PASSWORD" -T /usr/bin/codesign
           security list-keychains -s ~/Library/Keychains/build.keychain
           security list-keychains -s build.keychain
+          security unlock-keychain -p "github" build.keychain
           security set-keychain-settings build.keychain
+          security set-key-partition-list -S apple-tool:,apple: -s -k "github" build.keychain
         env:
           CERTIFICATE_P12: ${{ secrets.CERTIFICATE_P12 }}
           CERT_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
@@ -78,19 +80,17 @@ jobs:
           cd ios
           chmod -R 777 .
           rm -rf ~/Library/Developer/Xcode/DerivedData
-          pod deintegrate
+          pod deintegrate || true
           pod install --repo-update
           fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
-          export GYM_SCHEME="IosGithubActionBuild"
-          export GYM_DESTINATION="generic/platform=iOS"
-          export GYM_WORKSPACE="IosGithubActionBuild.xcworkspace"
-          export GYM_EXPORT_METHOD="app-store"
-          export GYM_OUTPUT_DIRECTORY="./build"
-          export GYM_OUTPUT_NAME="GenericBuild.ipa"
-          export GYM_CLEAN=true
-          # export GYM_XCARGS="-allowProvisioningUpdates"
-          export GYM_XCARGS="CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
-          fastlane run build_ios_app
+          fastlane run gym \
+            scheme:"IosGithubActionBuild" \
+            workspace:"IosGithubActionBuild.xcworkspace" \
+            export_method:"app-store" \
+            output_directory:"./build" \
+            output_name:"GenericBuild.ipa" \
+            clean:true \
+            xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
           
       - name:  Ios App Upload
         run: |
