--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -86,7 +86,7 @@ jobs:
           fastlane run build_ios_app \
             scheme:"IosGithubActionBuild" \
             workspace:"IosGithubActionBuild.xcworkspace" \
-            export_method:"app-store" \
+            export_method:"app-store-connect" \
             output_directory:"./build" \
             output_name:"GenericBuild.ipa" \
             clean:true \
