--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -83,6 +83,15 @@ jobs:
           pod deintegrate || true
           pod install --repo-update
           fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
+          xcodebuild \
+            -workspace "IosGithubActionBuild.xcworkspace" \
+            -scheme "IosGithubActionBuild" \
+            -configuration Release \
+            -archivePath "./build/GenericBuild.xcarchive" \
+            CODE_SIGN_IDENTITY="iPhone Distribution" \
+            CODE_SIGN_STYLE=Manual \
+            PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
+            clean archive | xcbeautify
           fastlane run build_ios_app \
             scheme:"IosGithubActionBuild" \
             workspace:"IosGithubActionBuild.xcworkspace" \
